--- a/how-to-play.html
+++ b/how-to-play.html
@@ -3,18 +3,19 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description"
-    content="Sushi-Casino-Brazil é uma experiência sensorial única que combina a riqueza da culinária japonesa com a emoção dos cassinos em território brasileiro. Desfrute dos sabores exóticos do sushi enquanto mergulha na atmosfera vibrante dos cassinos, criando momentos inesquecíveis de prazer gastronômico e entretenimento emocionante. Esta fusão cultural oferece aos visitantes uma jornada envolvente, onde os paladares refinados se encontram com a adrenalina dos jogos de azar, proporcionando uma experiência completa e inesquecível no Brasil.">
+    content="Sushi-how-to-play Delicie-se com sabores exóticos enquanto desfruta de entretenimento emocionante. ">
   <meta name="keywords"
-    content="sushi, cassino, Brasil, comida, entretenimento, diversão, culinária japonesa, sabores exóticos, jogos de azar, experiência única, atmosfera vibrante, fusão cultural, prazer gastronômico, adrenalina, turismo, vida noturna, excelência culinária, emocionante, festa, experiência inesquecível, elegância, vibração, diversidade, destinos populares, atmosfera envolvente.">
+    content="sushi, Bet, Brasil, comida, entretenimento, diversão, culinária japonesa, sabores exóticos, jogos de azar, experiência única, atmosfera vibrante, fusão cultural, prazer gastronômico, adrenalina, turismo, vida noturna, excelência culinária, emocionante, festa, experiência inesquecível, elegância, vibração, diversidade, destinos populares, atmosfera envolvente.">
   <meta name="robots" content="index, follow">
-    <meta name="google-site-verification" content="1bzb4kKlYpac0Dk63O5PEbugEEgk32zSZD3L_fAerIs" />
+  <meta name="google-site-verification" content="1bzb4kKlYpac0Dk63O5PEbugEEgk32zSZD3L_fAerIs" />
   <!-- <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"> -->
-  <title>Sushi-Casino-Brazil: Uma Fusão de Sabores e Entretenimento no Brasil</title>
-    <link href="https://https://sushi-bet-brasil.000webhostapp.com" rel="canonical">
+  <!-- htnl -->
+  <!-- css -->
+  <title>Sushi-how-to-play Uma Fusão de Sabores e Entretenimento no Brasil</title>
+  <link href="https://sushi-bet-brasil.000webhostapp.com" rel="canonical">
   <link rel="stylesheet" href="css/style.min.css?_v=20230727015200">
 </head>
 
@@ -60,11 +61,13 @@
   <main class="main">
     <section class="section">
       <div class="container">
+        <h1 class="sr-only">
+          Sushi e Cassinos: A Experiência Única do Brasil
+        </h1>
         <h2 class="title">
           Sushi e Cassino no Brasil: Uma Fusão de Culturas e Sabores
         </h2>
-        <img class="img" src="images/dist/garota.png"
-          alt="1 garota, braçadeira, ombros nus, céu azul, corar, seios, decote, dia, brincos, peixe, comida, sardas, olhos verdes, joias, seios grandes, lábios, cabelos longos, olhando para o espectador, colar, ao ar livre, cabelo rosa, camarão, céu, sorriso, sozinha, sushi, parte superior do corpo">
+        <img class="img" src="images/dist/garota.png" alt="1 garota, braçadeira, ombros nus, céu azul">
       </div>
     </section>
 
@@ -90,39 +93,26 @@
           <p>Nomor Tambahan: Angka 04</p>
           <span>Nomor buka: 0885</span>
           <span>Cara perhitungan rumus:</span>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
           <p>Bola-bola disusun dari yang terkecil hingga yang terbesar.</p>
-          <p>Penjumlahan bola ke-1 hingga bola ke-6, yaitu 7+21+29+32+36+38, sama dengan 163. Hasil ini kemudian dikalikan dengan 2,
-          menghasilkan 326.</p>
-          <p>Dari 326, kemudian dikurangkan dengan angka pada bola ke-1 (7) dan bola ke-6 (38), sehingga menjadi 281.</p>
+          <p>Penjumlahan bola ke-1 hingga bola ke-6, yaitu 7+21+29+32+36+38, sama dengan 163. Hasil ini kemudian
+            dikalikan dengan 2,
+            menghasilkan 326.</p>
+          <p>Dari 326, kemudian dikurangkan dengan angka pada bola ke-1 (7) dan bola ke-6 (38), sehingga menjadi 281.
+          </p>
           <p>Sisa 281 ditambahkan dengan nomor tambahan (04), sehingga totalnya menjadi 285.</p>
           <p>
             Dari 285, kita mendapatkan angka puluhan 85. Kemudian kita mencari angka ratusan dan ribuan.
           </p>
           <p>
-            
-          Untuk angka ratusan, kita ambil dari penjumlahan bola ke-4 (32) dan bola ke-5 (36), yang hasilnya 68. Angka belakangnya,
-          yaitu 8, diambil sebagai angka untuk ratusan.
+
+            Untuk angka ratusan, kita ambil dari penjumlahan bola ke-4 (32) dan bola ke-5 (36), yang hasilnya 68. Angka
+            belakangnya,
+            yaitu 8, diambil sebagai angka untuk ratusan.
           </p>
           <p>8 ini sebagai angka untuk ratusan</p>
-          <p>Sedangkan untuk angka ribuan, kita ambil dari penjumlahan bola ke-2 (21) dan bola ke-3 (29), yang hasilnya 50. Angka
-          belakangnya, yaitu 0, diambil sebagai angka untuk ribuan.</p>
+          <p>Sedangkan untuk angka ribuan, kita ambil dari penjumlahan bola ke-2 (21) dan bola ke-3 (29), yang hasilnya
+            50. Angka
+            belakangnya, yaitu 0, diambil sebagai angka untuk ribuan.</p>
           <p>0</p>
           <p>ini sebagai angka untuk ribuan</p>
           <p>Maka hasil perhitungannya adalah:</p>
@@ -142,7 +132,7 @@
             uma
             atmosfera vibrante e cativante.
           </div>
-          <a class="link" href="">
+          <a class="link" href="https://teletype.in/@sushibet">
             DAFTAR
           </a>
         </div>
@@ -179,18 +169,18 @@
           <p>C = KEPALA</p>
           <p>D = EKOR</p>
         </div>
-        <a class="link" href="#">DAFTAR</a>
-        <a class="link" href="#">LOGIN</a>
+        <a class="link" href="https://teletype.in/@sushibet">DAFTAR</a>
+        <a class="link" href="https://teletype.in/@sushibet">LOGIN</a>
       </div>
     </section>
   </main>
 
   <footer class="footer">
     <div class="container">
-      <picture><source srcset="images/hashis.avif" type="image/avif"><source srcset="images/dist/hashis.webp" type="image/webp"><picture><source srcset="images/dist/hashis.avif" type="image/avif"><source srcset="images/dist/hashis.webp" type="image/webp"><img class="img" src="images/dist/hashis.png" alt="6+ meninos, 6+ meninas, barba, cabelo preto, camisa preta, calça jeans azul, cadeira, hashis, olhos fechados, copo, jeans, bolinho cozido, comendo, pelos faciais, comida, coque de cabelo, chapéu, segurando, dentro, jaqueta, calça jeans, joias, cabelo comprido, mangas compridas, makizushi, vários meninos, várias meninas, bigode, boca aberta, camisa laranja, calças, prato, restaurante, camisa, sapatos, cabelo curto, sentado, sorriso, óculos de sol, sushi, suéter, mesa, relógio, camisa branca, relógio de pulso, camisa amarela"></picture></picture>
+      <img class="img" src="images/dist/hashis.png" alt="6+ meninos, 6+ meninas, barba, cabelo preto">
       <div class="copy">
         <span>© Copyright 2024</span>
-        <a href="#">sushi-bet-brasil.000webhostapp.com</a>
+        <a href="sushi-bet-brasil.000webhostapp.com">sushi-bet-brasil.000webhostapp.com</a>
       </div>
     </div>
   </footer>
