--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description"
-    content="Sushi-Casino-Brazil é uma experiência sensorial única que combina a riqueza da culinária japonesa com a emoção dos cassinos em território brasileiro. Desfrute dos sabores exóticos do sushi enquanto mergulha na atmosfera vibrante dos cassinos, criando momentos inesquecíveis de prazer gastronômico e entretenimento emocionante. Esta fusão cultural oferece aos visitantes uma jornada envolvente, onde os paladares refinados se encontram com a adrenalina dos jogos de azar, proporcionando uma experiência completa e inesquecível no Brasil.">
+    content="Experimente a fusão única de sushi japonês e emoção de cassino no Sushi-Bet-Brasil. Delicie-se com sabores exóticos enquanto desfruta de entretenimento emocionante.">
   <meta name="keywords"
-    content="sushi, cassino, Brasil, comida, entretenimento, diversão, culinária japonesa, sabores exóticos, jogos de azar, experiência única, atmosfera vibrante, fusão cultural, prazer gastronômico, adrenalina, turismo, vida noturna, excelência culinária, emocionante, festa, experiência inesquecível, elegância, vibração, diversidade, destinos populares, atmosfera envolvente.">
+    content="sushi bet brasil, sushi Casino brasil, sushi brasil, sushi bet, Brasil, sushi, Bet, Casino">
   <meta name="robots" content="index, follow">
   <meta name="google-site-verification" content="1bzb4kKlYpac0Dk63O5PEbugEEgk32zSZD3L_fAerIs" />
   <!-- <link rel="icon" href="favicon.ico" type="image/x-icon">
@@ -15,7 +15,7 @@
   <!-- htnl -->
   <!-- css -->
   <title>Sushi-Casino-Brazil: Uma Fusão de Sabores e Entretenimento no Brasil</title>
-  <link href="https://https://sushi-bet-brasil.000webhostapp.com" rel="canonical">
+  <link href="https://sushi-bet-brasil.000webhostapp.com" rel="canonical">
   <link rel="stylesheet" href="css/style.min.css?_v=20230727015200">
 </head>
 
@@ -66,8 +66,7 @@
         <h2 class="sr-only">
           Saboreie sushi em cassinos brasileiros, uma fusão emocionante de sabores e entretenimento.
         </h2>
-        <img class="img" src="images/dist/peixe.png"
-          alt="palitos de hashi, texto em inglês, peixe, comida, foco na comida, makizushi, carne, sem seres humanos, arroz, camarão, natureza morta, sushi, tamagoyaki, vegetal">
+        <img class="img" src="images/dist/peixe.png" alt="palitos de hashi, texto em">
       </div>
     </section>
 
@@ -83,8 +82,8 @@
           <!-- 3 строчки -->
         </div>
 
-        <a class="link" href="#">DAFTAR</a>
-        <a class="link" href="#">LOGIN</a>
+        <a class="link" href="https://teletype.in/@sushibet">DAFTAR</a>
+        <a class="link" href="https://teletype.in/@sushibet">LOGIN</a>
         <div class="text">
           <!-- 4 строчки -->
           Saboreie sushi em cassinos brasileiros, onde a excelência culinária encontra a emoção dos jogos de azar. Essa
@@ -93,8 +92,7 @@
           momentos
           memoráveis para os visitantes.
         </div>
-        <img class="img" src="images/dist/comida.png"
-          alt="texto em inglês, peixe, comida, foco na comida, makizushi, sem seres humanos, omelete, onigiri, arroz, camarão, natureza morta, sushi, tamagoyaki">
+        <img class="img" src="images/dist/comida.png" alt="texto em inglês, peixe, comida">
         <div class="text">
           <!-- 4 строчки -->
           Desfrute de sushi em cassinos brasileiros, uma fusão deliciosa de sabores sofisticados e entretenimento
@@ -103,19 +101,17 @@
           adrenalina dos
           jogos de azar, proporcionando momentos memoráveis de prazer gastronômico e diversão.
         </div>
-        <a class="link" href="#">DAFTAR</a>
-        <a class="link" href="#">LOGIN</a>
+        <a class="link" href="https://teletype.in/@sushibet">DAFTAR</a>
+        <a class="link" href="https://teletype.in/@sushibet">LOGIN</a>
       </div>
     </section>
 
     <section class="section">
       <div class="container">
-        <h2 class="__title title">
+        <h2 class="title">
           Sushi e Cassinos: Uma Fusão de Sabores e Entretenimento no Brasil
         </h2>
-        <img class="img" src="images/dist/barba.png"
-          alt="
-1 menina, 2 meninos, barba, cabelo preto, tigela, olhos fechados, pelos faciais, comida, chapéu, múltiplos meninos, bigode, sorriso, sushi">
+        <img class="img" src="images/dist/barba.png" alt="1 menina, 2 meninos, barba">
         <div class="text">
           <!-- 8 строчек -->
           Desfrute da experiência única de saborear sushi em cassinos brasileiros, onde a culinária japonesa se encontra
@@ -128,14 +124,14 @@
           proporcionando uma
           experiência gastronômica e de diversão incomparável.
         </div>
-        <a class="link" href="#">DAFTAR</a>
-        <a class="link" href="#">LOGIN</a>
+        <a class="link" href="https://teletype.in/@sushibet">DAFTAR</a>
+        <a class="link" href="https://teletype.in/@sushibet">LOGIN</a>
       </div>
     </section>
 
     <section class="section">
       <div class="container">
-        <h2 class="__title title">
+        <h2 class="title">
           Sabor e Sorte: O Encanto do Sushi nos Cassinos Brasileiros
         </h2>
         <div class="text">
@@ -164,19 +160,17 @@
           cassinos
           brasileiros uma experiência inesquecível.
         </div>
-        <a class="link" href="#">DAFTAR</a>
-        <a class="link" href="#">LOGIN</a>
+        <a class="link" href="https://teletype.in/@sushibet">DAFTAR</a>
+        <a class="link" href="https://teletype.in/@sushibet">LOGIN</a>
       </div>
     </section>
 
     <section class="section">
       <div class="container">
-        <h2 class="__title title">
+        <h2 class="title">
           O Impacto dos Apps na Sociedade Brasileira
         </h2>
-        <img class="img" src="images/dist/ehoumaki.png"
-          alt="
-ehoumaki, comida, foco na comida, makizushi, sem seres humanos, onigiri, prato, arroz, camarão, natureza morta, sushi, tamagoyaki, bandeja">
+        <img class="img" src="images/dist/ehoumaki.png" alt="ehoumaki, comida, foco na comida, makizushi">
         <div class="text">
           <!-- 6 строчек -->
           Os aplicativos revolucionaram a maneira como os brasileiros se comunicam, trabalham, e se divertem,
@@ -185,7 +179,7 @@ ehoumaki, comida, foco na comida, makizushi, sem seres humanos, onigiri, prato, 
           online, os
           aplicativos se tornaram uma ferramenta essencial para a conveniência e eficiência dos usuários no Brasil.
         </div>
-        <a class="link" href="">
+        <a class="link" href="https://teletype.in/@sushibet">
           Sushi MOBILE APK
         </a>
       </div>
@@ -193,17 +187,16 @@ ehoumaki, comida, foco na comida, makizushi, sem seres humanos, onigiri, prato, 
 
     <section class="section">
       <div class="container">
-        <h2 class="__title title">
+        <h2 class="title">
           Sushi nos Cassinos: Uma Experiência Brasileira
         </h2>
         <div class="text">
           <!-- 4строчки -->
           Desfrute do sushi em cassinos brasileiros, uma fusão irresistível de sabores e entretenimento emocionante.
         </div>
-        <a class="link" href="">Sushi LINK ALTERNATIF</a>
-        <img class="img" src="images/dist/prato.png"
-          alt="
-tigela, cadeira, profundidade de campo, comida, foco na comida, dentro de casa, sem seres humanos, prato, restaurante, cenário, natureza morta, mesa">
+        <a class="link" href="https://teletype.in/@sushibet">Sushi LINK ALTERNATIF</a>
+        <img class="img" src="images/dist/prato.png" alt="tigela, cadeira, profundidade de campo">
+        <!-- похоже правда огранисение на кол во слов где 50 символов  -->
       </div>
     </section>
 
@@ -211,10 +204,10 @@ tigela, cadeira, profundidade de campo, comida, foco na comida, dentro de casa, 
 
   <footer class="footer">
     <div class="container">
-      <picture><source srcset="images/dist/paródia.avif" type="image/avif"><source srcset="images/paródia.webp" type="image/webp"><picture><source srcset="images/dist/paródia.avif" type="image/avif"><source srcset="images/dist/paródia.webp" type="image/webp"><img class="img" src="images/dist/paródia.png" alt="logotipo, paródia de logotipo, sem seres humanos"></picture></picture>
+      <img class="img" src="images/dist/paródia.png" alt="logotipo, paródia de logotipo, sem seres">
       <div class="copy">
         <span>© Copyright 2024</span>
-        <a href="#">sushi-bet-brasil.000webhostapp.com</a>
+        <a href="sushi-bet-brasil.000webhostapp.com">sushi-bet-brasil.000webhostapp.com</a>
       </div>
     </div>
   </footer>
