--- a/promosi.html
+++ b/promosi.html
@@ -5,17 +5,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description"
-    content="Sushi-Casino-Brazil é uma experiência sensorial única que combina a riqueza da culinária japonesa com a emoção dos cassinos em território brasileiro. Desfrute dos sabores exóticos do sushi enquanto mergulha na atmosfera vibrante dos cassinos, criando momentos inesquecíveis de prazer gastronômico e entretenimento emocionante. Esta fusão cultural oferece aos visitantes uma jornada envolvente, onde os paladares refinados se encontram com a adrenalina dos jogos de azar, proporcionando uma experiência completa e inesquecível no Brasil.">
+    content="Sushi-promosi Delicie-se com sabores exóticos enquanto desfruta de entretenimento emocionante.">
   <meta name="keywords"
-    content="sushi, cassino, Brasil, comida, entretenimento, diversão, culinária japonesa, sabores exóticos, jogos de azar, experiência única, atmosfera vibrante, fusão cultural, prazer gastronômico, adrenalina, turismo, vida noturna, excelência culinária, emocionante, festa, experiência inesquecível, elegância, vibração, diversidade, destinos populares, atmosfera envolvente.">
+    content="sushi, Bet, Brasil, comida, entretenimento, diversão, culinária japonesa, sabores exóticos, jogos de azar, experiência única, atmosfera vibrante, fusão cultural, prazer gastronômico, adrenalina, turismo, vida noturna, excelência culinária, emocionante, festa, experiência inesquecível, elegância, vibração, diversidade, destinos populares, atmosfera envolvente.">
   <meta name="robots" content="index, follow">
   <meta name="google-site-verification" content="1bzb4kKlYpac0Dk63O5PEbugEEgk32zSZD3L_fAerIs" />
   <!-- <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"> -->
   <!-- htnl -->
   <!-- css -->
-  <title>Sushi-Casino-Brazil: Uma Fusão de Sabores e Entretenimento no Brasil</title>
-  <link href="https://https://sushi-bet-brasil.000webhostapp.com" rel="canonical">
+  <title>Sushi-promosi: Uma Fusão de Sabores e Entretenimento no Brasil</title>
+  <link href="https://sushi-bet-brasil.000webhostapp.com" rel="canonical">
   <link rel="stylesheet" href="css/style.min.css?_v=20230727015200">
 </head>
 
@@ -61,17 +61,16 @@
   <main class="main">
     <section class="section">
       <div class="container">
+        <h1 class="sr-only">
+          Sushi e Cassinos: A Experiência Única do Brasil
+        </h1>
         <h2 class="title">
           Promoção Eficaz
         </h2>
         <div class="subtext">
           <span>Promoção: Essencial para o Sucesso</span>
         </div>
-        <picture>
-          <source srcset="images/dist/seios.avif" type="image/avif">
-          <source srcset="images/seios.webp" type="image/webp"><img class="img" src="images/dist/seios.png"
-            alt="1 garota, cabelo preto, seios, vestido, comida, enfeite de cabelo, batom, olhando para o espectador, maquiagem, onigiri, lábios vermelhos, arroz, mangas curtas, sorriso, solo, sushi.">
-        </picture>
+        <img class="img" src="images/dist/seios.png" alt="1 garota, cabelo preto, seios, vestido, comida">
         <div class="text">
           <span class="subtext">Bônus de Rendimento de Caça-Níqueis</span>
           <p>Exemplo de Cálculo de Bônus:</p>
@@ -102,7 +101,7 @@
             6. Todas as decisões da sushi não podem ser contestadas.
           </li>
         </ul>
-        <a class="link" href="">Obtenha um BÔNUS.</a>
+        <a class="link" href="https://teletype.in/@sushibet">Obtenha um BÔNUS.</a>
       </div>
     </section>
 
@@ -117,21 +116,17 @@
           japonesa,
           proporcionando uma experiência inigualável para os visitantes.
         </div>
-        <a class="link" href="">BONUS 100%</a>
+        <a class="link" href="https://teletype.in/@sushibet">BONUS 100%</a>
       </div>
     </section>
   </main>
 
   <footer class="footer">
     <div class="container">
-      <picture>
-        <source srcset="images/dist/folha.avif" type="image/avif">
-        <source srcset="images/folha.webp" type="image/webp"><img class="img" src="images/dist/folha.png"
-          alt="peixe, comida, foco alimentar, folha, makizushi, sem humanos, onigiri, prato, arroz, camarão, natureza morta, sushi, tamagoyaki, vegetal">
-      </picture>
+      <img class="img" src="images/dist/folha.png" alt="peixe, comida, foco alimentar, folha">
       <div class="copy">
         <span>© Copyright 2024</span>
-        <a href="#">sushi-bet-brasil.000webhostapp.com</a>
+        <a href="https://teletype.in/@sushibet">sushi-bet-brasil.000webhostapp.com</a>
       </div>
     </div>
   </footer>
