--- a/sushi-login.html
+++ b/sushi-login.html
@@ -3,18 +3,19 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description"
-    content="Sushi-Casino-Brazil é uma experiência sensorial única que combina a riqueza da culinária japonesa com a emoção dos cassinos em território brasileiro. Desfrute dos sabores exóticos do sushi enquanto mergulha na atmosfera vibrante dos cassinos, criando momentos inesquecíveis de prazer gastronômico e entretenimento emocionante. Esta fusão cultural oferece aos visitantes uma jornada envolvente, onde os paladares refinados se encontram com a adrenalina dos jogos de azar, proporcionando uma experiência completa e inesquecível no Brasil.">
+    content="Sushi-login Delicie-se com sabores exóticos enquanto desfruta de entretenimento emocionante. ">
   <meta name="keywords"
-    content="sushi, cassino, Brasil, comida, entretenimento, diversão, culinária japonesa, sabores exóticos, jogos de azar, experiência única, atmosfera vibrante, fusão cultural, prazer gastronômico, adrenalina, turismo, vida noturna, excelência culinária, emocionante, festa, experiência inesquecível, elegância, vibração, diversidade, destinos populares, atmosfera envolvente.">
+    content="sushi, Bet, Brasil, comida, entretenimento, diversão, culinária japonesa, sabores exóticos, jogos de azar, experiência única, atmosfera vibrante, fusão cultural, prazer gastronômico, adrenalina, turismo, vida noturna, excelência culinária, emocionante, festa, experiência inesquecível, elegância, vibração, diversidade, destinos populares, atmosfera envolvente.">
   <meta name="robots" content="index, follow">
   <meta name="google-site-verification" content="1bzb4kKlYpac0Dk63O5PEbugEEgk32zSZD3L_fAerIs" />
   <!-- <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"> -->
-  <title>Sushi-Casino-Brazil: Uma Fusão de Sabores e Entretenimento no Brasil</title>
-  <link href="https://https://sushi-bet-brasil.000webhostapp.com" rel="canonical">
+  <!-- htnl -->
+  <!-- css -->
+  <title>Sushi-login Uma Fusão de Sabores e Entretenimento no Brasil</title>
+  <link href="https://sushi-bet-brasil.000webhostapp.com" rel="canonical">
   <link rel="stylesheet" href="css/style.min.css?_v=20230727015200">
 </head>
 
@@ -60,14 +61,13 @@
   <main class="main">
     <section class="section">
       <div class="container">
+        <h1 class="sr-only">
+          Sushi e Cassinos: A Experiência Única do Brasil
+        </h1>
         <h2 class="title">
           Sushi Login: Sabor e Conexão
         </h2>
-        <picture>
-          <source srcset="images/dist/terno.avif" type="image/avif">
-          <source srcset="images/terno.webp" type="image/webp"><img class="img" src="images/dist/terno.png"
-            alt="1 menino, barba, cabelo preto, camisa com colarinho, pelos faciais, comida, formal, interior, jaqueta, mahjong, foco masculino, bigode, gravata, ficha de pôquer, jaqueta vermelha, gravata vermelha, restaurante, camisa, cabelo curto, sozinho, terno, sushi, mesa, colete, camisa branca">
-        </picture>
+        <img class="img" src="images/dist/terno.png" alt="1 menino, barba, cabelo preto, camisa com">
         <div class="text">
           <!-- 3строчки -->
           Descubra uma abordagem inovadora para autenticação online com Sushi Login, uma fusão de praticidade e sabor.
@@ -75,21 +75,17 @@
           suas
           contas com Sushi Login hoje mesmo!
         </div>
-        <a class="link" href="">Abra o site.</a>
+        <a class="link" href="https://teletype.in/@sushibet">Abra o site.</a>
       </div>
     </section>
   </main>
 
   <footer class="footer">
     <div class="container">
-      <picture>
-        <source srcset="images/árvore.avif" type="image/avif">
-        <source srcset="images/dist/árvore.webp" type="image/webp"><img class="img" src="images/dist/árvore.png"
-          alt="céu azul, nuvem, dia, peixe, comida, foco na comida, makizushi, sem humanos, oceano, onigiri, ao ar livre, palmeira, planta, prato, arroz, paisagem, alga marinha, camarão, céu, sushi, árvore">
-      </picture>
+      <img class="img" src="images/dist/árvore.png" alt="céu azul, nuvem, dia, peixe, comida">
       <div class="copy">
         <span>© Copyright 2024</span>
-        <a href="#">sushi-bet-brasil.000webhostapp.com</a>
+        <a href="sushi-bet-brasil.000webhostapp.com">sushi-bet-brasil.000webhostapp.com</a>
       </div>
     </div>
   </footer>
